# blog-348OEjOG-goplugins

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml
api/proto/: buf.gen.yaml
api/proto/admin/v1/: admin.proto
cmd/external_go_plugin/: main.go
cmd/external_py_plugin/: main.py
cmd/server/: main.go
internal/pluginruntime/: adapter.go  manager.go
internal/pluginruntime/plugins/plugin_en/: plugin.go
internal/server/: handler.go
